Added separate file for tests and demos

--- a/something.html
+++ b/something.html
@@ -18,6 +18,6 @@
 			</div>
 		</main>
 		<footer></footer>
-	   <script src="something.js"></script>
+	   <script src="something2.js"></script>
     </body>
 </html>
