--- a/exercises.html
+++ b/exercises.html
@@ -18,6 +18,6 @@
 			</div>
 		</main>
 		<footer></footer>
-	   <script src="removeFirstLetter.js"></script>
+	   <script src="exercises.js"></script>
     </body>
 </html>
